[package]
name = "webapp"
version = "0.1.0"
authors = ["Marcos Trajano <mtraja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
mongodb =  "1.1.1"
futures = "0.3.12"
